--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ section {
     overflow: hidden;
     box-sizing: border-box;
 }
-#sub1, #sub2, #sub3 {
+#sub1n1, #sub1n2, #sub1n3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -160,7 +160,7 @@ section {
     box-sizing: border-box;
     gap: 2vw;
 }
-#sub1 {
+#sub1n1 {
     flex-direction: row;
     width: 100%;
     height: 33vw;
@@ -170,7 +170,7 @@ section {
     flex: 1;
     height: 100%;
 }
-#sub2 {
+#sub1n2 {
     flex: 1;
     height: 100%;
     flex-direction: column;
@@ -179,7 +179,7 @@ section {
     flex: 1;
     width: 100%;
 }
-#sub3 {
+#sub1n3 {
     flex: 1;
     width: 100%;
     flex-direction: row;
@@ -363,14 +363,21 @@ section {
     align-items: center;
     flex-direction: row;
     font-size: 0;
-    gap: 2vw;
+    gap: 1vw;
     margin: 0 10vw;
 }
 #sub8n2 {
-    flex: 1;
+    color: black;
+    font-family: "montserrat";
+    font-weight: 300;
+    font-style: normal;
+    text-align: center;
+    font-size: 2vw;
+    line-height: 1.2;
+    margin: 1vw;
 }
 #img8 {
-    flex: 1;
+    width: 20vw;
     height: 100%;
     object-fit: cover;
     position: relative;
