--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ section {
     margin: 1vw;
     font-size: 0;
 }
-.timeline::after {
+.timeline2::after {
     content: '';
     position: absolute;
     width: 1vw;
