--- a/styles.css
+++ b/styles.css
@@ -291,46 +291,10 @@ section {
     position: relative;
     overflow: hidden;
 }
-#button1 {
-    height: 100%;
+
+#map3{
     flex: 1;
-    box-sizing: border-box;
-    object-fit: cover;
-    background-size: cover;
-    background-position: center;
-    background-image: url('img/img5.jpg');
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    border: none;
-    color: white;
-    font-family: "montserrat";
-    font-weight: 700;
-    font-style: normal;
-    text-align: center;
-    font-size: 4vw;
-    line-height: 1;
-}
-#button1::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 0;
-}
-#button1:hover::before {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-#button1:hover{
-    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.6);
-}
-#button1 span {
-    position: relative;
-    z-index: 1;
+    height: 100%
 }
 
 /* Section 4 */
@@ -472,6 +436,7 @@ section {
 
 /* Smartphones */
 @media (max-width: 768px){
+    /* General */
     *, *::before, *::after {
         box-sizing: inherit;
         border-radius: 5vw;
@@ -495,6 +460,7 @@ section {
     section {
         margin: 2vw;
     }
+    /* Section 1 */
     #sub1n1 {
         flex-direction: column;
         height: 100vw;
@@ -507,26 +473,12 @@ section {
         width: 100%;
         height: 50vw;
     }
+    /* Section 2 */
     .left_container {
         margin-left: 46.5%;
     }
     .right_container {
         margin-left: 54.5%;
     }
+    /* Section 3 */
 }
-
-/* Images
-.section-images {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.section-images img {
-    height: 10vw;
-    width: auto;
-    border-radius: 2vw;
-    box-sizing: border-box;
-    object-fit: contain;
-}
-*/
