--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ section {
     box-sizing: border-box;
 }
 
-/* Navigation-bar */
+/* Navigation-bar*/
 #navbar {
     background: #004AAD;
     padding: 0;
@@ -96,15 +96,12 @@ section {
     white-space: nowrap;
     width: 100%;
     display: flex;
+    justify-content: space-evenly;
     border-radius: 0; 
     height: 4vw;
     flex-direction: row;
-    justify-content: space-evenly;
 }
-#navbar li {
-    display: inline-block;
-}
-#hamburger, #nav1, #nav2, #nav3, #nav4, #nav5, #nav6, #nav7, #nav8, #language {
+.nav{
     display: inline-block;
     line-height: 1vw;
     display: flex;
@@ -466,22 +463,23 @@ section {
         font-size: 3vw;
     }
     /* Navigation-bar */
-    /*
     #navbar {
         flex-direction: column;
         height: auto;
     }
-    #navbar li {
+    .nav {
         display: none;
         width: 100%;
+        height: 40px;
+        font-size: 4vw;
+        line-height: 1;
     }
-    #hamburger, #language {
-        display: flex;
+    #hamburger{
+        display: inline-block;
     }
-    #navbar #hamburger button {
+    #language {
         font-size: 4vw;
     }
-    */
     /* Section 0 */
     #section0 .titlestyle{
         white-space: pre-line;
