--- a/styles.css
+++ b/styles.css
@@ -412,8 +412,8 @@ section {
     text-align: center;
     font-size: 3vw;
     line-height: 1;
-    padding: 1vw;
-    border-radius: 2vw;
+    padding: 3vw;
+    border-radius: 3vw;
     margin-top: 2vw;
 }
 #button7:hover{
@@ -428,7 +428,7 @@ section {
     flex-direction: row;
     font-size: 0;
     gap: 1vw;
-    margin: 0 10vw;
+    height: 25vw;
 }
 #sub8n2 {
     color: black;
@@ -441,12 +441,25 @@ section {
     margin: 1vw;
 }
 #img8 {
-    width: 20vw;
     height: 100%;
     object-fit: cover;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
+}
+
+/* Footer */
+footer {
+    background: #c3e5ff3c;
+    font-style: normal;
+    border-radius: 0;
+    color: black;
+    font-family: "montserrat";
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
 }
 
 /* Smartphones */
@@ -533,5 +546,13 @@ section {
     #img3n2,#img3n3 {
         width: 70%;
         height: auto;
+    }
+    /* Section 8 */
+    #sub8n1 {
+        height: 40vw;
+    }
+    /* Footer */
+    footer {
+        font-size: 2vw;
     }
 }
