--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@ html, body, a {
     padding: 0;
 }
 
-h1, h2, p {
-    margin: 1vw 0;
-}
-
 html, body {
     margin: 0;
     padding: 0;
@@ -67,7 +63,7 @@ html, body {
     font-size: 2vw;
     line-height: 1;
 }
-.textstyle, .textstyle a {
+.textstyle {
     color: black;
     font-family: "montserrat";
     font-weight: 300;
@@ -78,17 +74,23 @@ html, body {
     text-wrap: balance;
 }
 
+.textstyle a {
+    color: black;
+    text-wrap: balance;
+}
+
 /* Sections */
 section {
     background: #c3e5ff3c;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
-    padding: 1vw 2vw 2vw 2vw;
-    margin-top: 3vw;
-    margin-bottom: 3vw;
+    margin: 2.5vw auto;
     width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
     box-sizing: border-box;
+    padding: 0.5vw 1.5vw;
+    text-align: center;
+}
+section > * {
+    margin: 1vw;
 }
 
 /* Navigation-bar*/
@@ -145,7 +147,6 @@ section {
     color: white;
     background-color: transparent;
     border: none;
-    height: 100%;
     border-radius: 0;
     overflow: hidden;
     outline: none;
@@ -170,17 +171,18 @@ section {
     text-align: center;
     white-space: nowrap;
     font-size: 9vw;
+    margin: 1vw;
 }
 
 #section0 .textstyle {
     font-size: 4vw;
+    margin: 1vw;
 }
 
 /* Section 1 */
 #img1n1, #img1n2, #img1n3, #map1 {
     display: inline-block;
     object-fit: cover;
-    position: relative;
     overflow: hidden;
     box-sizing: border-box;
 }
@@ -189,15 +191,14 @@ section {
     justify-content: center;
     align-items: center;
     font-size: 0;
-    position: relative;
-    overflow: auto;
+    overflow: hidden;
     box-sizing: border-box;
     gap: 2vw;
 }
 #sub1n1 {
     flex-direction: row;
-    width: 100%;
     height: 33vw;
+    margin: 1vw;
 }
 #map1 {
     flex: 1;
@@ -260,11 +261,12 @@ section {
     position: relative;
 }
 .left_container {
-    margin-left: 34vw;
-    transform: translateX(-100%);
+    margin-right: 6vw;
+    transform: translateX(-50%);
 }
 .right_container {
-    margin-left: 41vw;
+    margin-left: 8vw;
+    transform: translateX(50%);
 }
 .left_container::before, .right_container::before{
     content: '';
@@ -312,7 +314,6 @@ section {
     flex-direction: row;
     font-size: 0;
     height: 25vw;
-    width: 100%;
     gap: 2vw;
 }
 #img3n1 {
@@ -397,29 +398,21 @@ section {
     height: 100%;
 }
 #button7 {
-    width: 100%;
-    box-sizing: border-box;
-    object-fit: cover;
-    background-size: cover;
-    background-position: center;
+    width: 75vw;
     cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    position: relative;
     border: none;
     color: white;
     background-color: #004AAD;
     font-family: "montserrat";
     font-weight: 700;
     font-style: normal;
-    text-align: center;
     font-size: 2.5vw;
     line-height: 1;
     padding: 3vw;
     border-radius: 3vw;
-    margin-top: 2vw;
 }
 #button7:hover{
+    /*TODO*/
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
@@ -547,6 +540,9 @@ footer {
         height: auto;
     }
     /* Section 2 */
+    .timeline2 {
+        text-align: left;
+    }
     .timeline2::after {
         content: '';
         position: absolute;
@@ -590,6 +586,7 @@ footer {
     /* Section 7 */
     #button7 {
         font-size: 4vw;
+        width: 85vw;
     }
     /* Section 8 */
     #sub8n1 {
