--- a/styles.css
+++ b/styles.css
@@ -518,7 +518,7 @@ footer {
     background-color: #131a1d;
 }
 .dark-mode section {
-    background-color: #101b26;
+    background-color: #142332;
 }
 .dark-mode .titlestyle {
     color: #4286df;
